# django-amiqus

./: .coveragerc  .envrc  .gitignore  .isort.cfg  .pre-commit-config.yaml  .ruff.toml  CHANGELOG  README  README.md  README.rst  pyproject.toml  shell.nix  taskfile.dist.yml  tox.ini
.github/workflows/: tox.yml
amiqus/: admin.py  api.py  apps.py  data.py  decorators.py  helpers.py  settings.py  signals.py  types.py  urls.py  views.py
amiqus/management/commands/: onfido_sync.py
amiqus/migrations/: 0001_initial.py  0002_record_perform_url_alter_record_status.py  0003_alter_client_status.py  0003_replace_status_none_with_unknown.py  0004_add_check_types.py  0004_alter_check_check_type.py  0004_update_check_types.py  0005_form_step_review.py  0005_review_form_step.py  0006_step_amiqus_id.py
amiqus/models/: __init__.py  base.py  check.py  client.py  event.py  form.py  record.py  review.py  step.py
tests/: conftest.py  settings.py  test_admin.py  test_api.py  test_data.py  test_decorators.py  test_helpers.py  test_integration.py  test_settings.py  test_views.py  test_webhooks.py  urls.py
tests/test_app/: admin.py  apps.py
tests/test_app/migrations/: 0001_initial.py
tests/test_models/: test_base.py  test_check.py  test_client.py  test_event.py  test_record.py  test_report.py  test_step.py
