[tool.poetry]
name = "django-amiqus"
version = "0.2"
description = "Django app for integration with Amiqus."
license = "MIT"
authors = ["YunoJuno <code@yunojuno.com>"]
maintainers = ["YunoJuno <code@yunojuno.com>"]
readme = "README"
homepage = "https://github.com/yunojuno/django-amiqus"
repository = "https://github.com/yunojuno/django-amiqus"
documentation = "https://github.com/yunojuno/django-amiqus"
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 3.2",
    "Framework :: Django :: 4.0",
    "Framework :: Django :: 4.1",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
packages = [
    { include = "amiqus" }
]

[tool.poetry.dependencies]
python = "^3.10"
django = "^3.2 || ^4.0 || ^5.0"
python-dateutil = "*"
requests =  "*"
simplejson = "*"

[tool.poetry.group.dev.dependencies]
black = "*"
mypy = "*"
pre-commit = "*"
ruff = "*"
tox = "*"
types-requests = "*"
types-python-dateutil = "*"
types-simplejson = "*"

[tool.poetry.group.test.dependencies]
coverage = "*"
pytest = "*"
pytest-cov = "*"
pytest-django = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
